--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/App.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/App.mxml
@@ -29,7 +29,9 @@
     <mx:Metadata>
         [Name("application")]
         [ManagedEvent(name="APP.MERGE_GRANTS")]
-	[ManagedEvent(name="APP.READY_TO_UNLOAD")]
+	    [ManagedEvent(name="APP.READY_TO_UNLOAD")]
+        [ResourceBundle("appMain")]
+        [ResourceBundle("appError")]
     </mx:Metadata>
 
     <mx:Script>
